# simple-kanban

./: .env.example  .flake8  CONTAINERIZED_TESTING.md  DOCS_UPDATE_SUMMARY.md  DOCUMENTATION_ORGANIZATION.md  Dockerfile  FRONTEND_TESTING_COMPLETE.md  MAKEFILE_FIXES.md  MAKEFILE_TESTING_UPDATE.md  MAKEFILE_UPDATE_SUMMARY.md  Makefile  PRODUCTION_TESTING_GUIDE.md  README.md  TESTING_PLAN.md  TESTING_SUCCESS_SUMMARY.md  TEST_FAILURE_ANALYSIS.md  UI_IMPROVEMENTS_PROGRESS.md  alembic.ini  cookies.txt  debug_api_keys.py  docker-compose.yml  frontend-test-results.json  pyproject.toml  requirements.txt  skaffold-db-only.yaml  skaffold.yaml  test-performance-20251013-003740.csv  test-results.json  test_api_key_flow.py
.ai-config/processes/: chart-version-management.md
.ai-config/standards/: project-templates.md  readme-maintenance.md  skaffold-database-patterns.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_auth_fields_to_user.py  003_add_oidc_provider_table.py  004_make_password_nullable.py  005_add_owner_id_to_boards.py  006_fix_null_owner_ids.py  007_add_comments_to_tasks.py  008_create_task_comments_table.py  009_fix_task_comments_timestamps.py
docs/: 01-product-definition.md  03-user-stories.md  04-architecture-options.md  06-requirements-review.md  07-project-rules.md  08-feature-planning.md  09-development-stories.md  16-authentication-authorization.md  17-multi-user-implementation-plan.md  19-next-phase-user-stories.md  DOCS_REORGANIZATION_2025-10-13.md  FRONTEND_TESTING_STATUS.md  INDEX.md  LOCAL_DEV_IMPLEMENTATION.md  LOCAL_DEV_IMPROVEMENTS.md  MERGE_DECISION_2025-10-13.md  NEXT_STEPS_PLANNING.md  README.md  READY_FOR_MAIN_REVIEW.md  TECH_DEBT.md  api-key-testing.md  authentication-testing-gaps.md  database-schema.md  kubernetes-resource-analysis.md  local-monitoring-stack.md  member-management-testing.md  project-status.md  skaffold-testing-integration.md  sops-secrets-management.md  test-optimization-plan.md  testing-resources.md
docs-build1/: README-build1.md  feature-planning-build1.md  lessons-learned-build1.md  project-status-build1.md  sprint-retrospectives-build1.md
docs/evaluations/: 2025-10-04-security-code-review.md  2025-10-09-deployment-verification.md  2025-10-09-evaluation-summary.md  2025-10-09-project-evaluation.md  2025-10-11-feature-completion-evaluation.md  2025-10-13-comprehensive-evaluation.md  2025-10-13-development-process-evaluation.md  README.md
docs/guides/: README.md  frontend-features-roadmap.md
docs/summaries/: 2025-09-mvp-completion.md  2025-10-04-authentication-testing-completion.md  2025-10-04-comprehensive-review-summary.md  2025-10-04-deployment-testing-integration.md  2025-10-04-group-collaboration-completion.md  2025-10-04-security-hardening-completion.md  2025-10-07-complete-test-coverage.md  2025-10-07-frontend-testing-implementation.md  2025-10-11-member-management-completion.md  2025-10-13-testing-performance-summary.md  README.md
helm/simple-kanban/: values-dev.yaml  values-local.yaml  values-prod.yaml  values.yaml
scripts/: README.md  check-user-admin.sh  create-test-user.sh  diagnose-enum.py  monitor-docker-resources.sh  monitor-test-performance.sh  monitor-test-resources.sh  post-deploy-test.sh  restore-admin-access.sh  set-admin-token.js  setup-frontend-tests.sh  startup.sh  test-admin.sh  test-all.sh  test-api-key.sh  test-auth-comprehensive.sh  test-auth-endpoints.sh  test-auth-jwt.sh  test-auth-registration.sh  test-bootstrap.sh  test-frontend-docker.sh  test-frontend-json.sh  test-frontend.sh  test-groups.sh  test-member-management.sh  test-parallel.sh  test-soft-fail-demo.sh  test-with-bootstrap.sh
src/: database.py  main.py
src/api/: __init__.py  admin.py  api_keys.py  auth.py  boards.py  columns.py  groups.py  oidc.py  task_comments.py  tasks.py
src/auth/: __init__.py  dependencies.py  jwt_handler.py  oidc_client.py  oidc_config.py  schemas.py  session_service.py
src/core/: config.py  security.py
src/middleware/: __init__.py  security.py
src/models/: __init__.py  (+10 more)
tests/: test_api_integration.py  test_auth.py  test_database.py  test_main.py  test_security_only.py  test_simple.py
tests/frontend/: .dockerignore  .gitignore  CREDENTIAL_SETUP.md  CRITICAL_BUG_FIXED.md  Dockerfile  QUICKSTART.md  README.md  SETUP.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup_test_user.py  test_api_registration.py  test_authentication.py  test_board_comprehensive.py  test_board_management.py  test_debug.py  test_group_management.py  test_registration_debug.py  test_task_comments.py  test_task_modal_reusability.py  test_user_registration.py
(+37 files in other folders)
