[tool.poetry]
name = "simple-kanban-frontend-tests"
version = "1.0.0"
description = "Frontend testing suite for Simple Kanban Board using Playwright"
authors = ["Simple Kanban Team"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.40.0"
pytest = "^7.4.3"
pytest-playwright = "^0.4.3"
pytest-asyncio = "^0.21.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers --color=yes"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: marks tests as smoke tests (quick validation)",
    "critical: marks tests as critical functionality",
    "modal: marks tests related to modal functionality",
    "auth: marks tests related to authentication",
]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
